--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [flake8]
-ignore = D203,E999,W503
-exclude =
+ignore=D203,E999,W503
+exclude=
     .git,
     __pycache__,
     venv,
@@ -8,8 +8,9 @@ exclude =
 per-file-ignores =
     # imported but unused
     __init__.py: F401
-max-complexity = 10
-max-line-length= 90
+max-complexity=7
+max-line-length=90
+max-doc-length=90
 exit-zero=True
 count=True
 statictics=True
