--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: api_db
     restart: always
     ports:
-      - 5432:5432
+      - 5433:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -22,6 +22,9 @@ services:
       && python main.py"
     ports:
       - 8000:80
+    environment:
+      - POSTGRES_HOST=api_db
+      - POSTGRES_PORT=5432
     depends_on:
       - api_db
 volumes:
