--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ run_tests:
   image: python:3.10-alpine
   before_script:
     - pip install --upgrade pip
+    - pip install -r requirements/common.txt
     - pip install -r requirements/dev.txt
   script:
     - pytest
