Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,8 @@ build_docker_image:
     DOCKER_TLS_CERTDIR: "/certs"
     IMAGE_NAME: fast-api
   before_script:
-    - docker login -u $DOCKER_USER -p $DOCKER_PASS
+    - docker logout
+    - docker login -u $DOCKER_USER -p $DOCKER_PASS docker.io
   script:
     - docker build -t $DOCKER_USER/$IMAGE_NAME:laster .
     - docker push $DOCKER_USER/$IMAGE_NAME:latest
