--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,10 +19,10 @@ build_docker_image:
     - docker:20.10.16-dind
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
-    IMAGE_NAME: fast-api
+    IMAGE_NAME: fast-api:latest
   before_script:
     - docker logout
     - docker login -u $DOCKER_USER -p $DOCKER_PASS docker.io
   script:
-    - docker build -t $DOCKER_USER/$IMAGE_NAME:laster .
-    - docker push $DOCKER_USER/$IMAGE_NAME:latest
+    - docker build -t $DOCKER_USER/$IMAGE_NAME .
+    - docker push $DOCKER_USER/$IMAGE_NAME
