--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,13 +16,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10"]
+
+    name: Python ${{ matrix.python-version }}
+
     steps:
       - uses: actions/checkout@master
-
-      - name: Set up Python 3.9
+      - name: Set up Python
         uses: actions/setup-python@master
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
