--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,3 +48,10 @@ jobs:
           name: Test-FastAPI
           fail_ci_if_error: true
           verbose: true
+      - name: Build & push docker image
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: meschac38000/fast-api:latest
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
