try to fix the build of docker image

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,7 +51,9 @@ jobs:
       - name: Build & push docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          image: meschac38000/fast-api:latest
+          image: meschac38000/fast-api
+          tags: latest
+          dockerfile: Dockerfile
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
