--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: [3.9, 3.10]
 
     name: Python ${{ matrix.python-version }}
 
@@ -48,6 +48,13 @@ jobs:
           name: Test-FastAPI
           fail_ci_if_error: true
           verbose: true
+  deploy:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    name: Deploy docker image
+    steps:
+      - uses: actions/checkout@master
+
       - name: Build & push docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
