rename jobs lint -> format

--- a/.github/workflows/app-format.yaml
+++ b/.github/workflows/app-format.yaml
@@ -5,7 +5,7 @@ on:
     branches: [master]
 
 jobs:
-  lint:
+  format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
