--- a/.github/workflows/app-format.yaml
+++ b/.github/workflows/app-format.yaml
@@ -1,11 +1,14 @@
 name: Black
 
 on:
-  push:
-    branches: [master]
+  pull_request:
+    branches:
+      - master
+    types: [closed]
 
 jobs:
   format:
+    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
