--- a/.github/workflows/app-format.yaml
+++ b/.github/workflows/app-format.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@master
+        with:
+            python-version: 3.10
 
       - name: Install Black
         run: |
