--- a/.github/workflows/app-image-deploy.yml
+++ b/.github/workflows/app-image-deploy.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     name: Deploy docker image
     steps:
