--- a/.github/workflows/app-format.yaml
+++ b/.github/workflows/app-format.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: setup python
         uses: actions/setup-python@master
         with:
-            python-version: "3.10"
+            python-version: 3.10
 
       - name: Install Black
         run: |
